[tool.poetry]
name = "rupayamn"
version = "1.0.7"
description = "Quickstart your masternode"
readme = "README.md"
license = "GPL-3.0+"
homepage = "https://rupx.io"
repository = "https://github.com/rupaya-project/rupayamn"
documentation = "https://docs.rupx.io/masternode/rupayamn/"
keywords = ["rupaya", "blockchain", "masternode", "node"]
authors = [
  "Aasim <aasim@rupx.io>"
]

[tool.poetry.dependencies]
python = "^3.5"
docker = "^3.5.0"
pastel = "^0.1.0"
clint = "^0.5.1"
python-slugify = "^1.2"
click = "^7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
coveralls = "^1.3"
pytest = "^3.6"

[tool.poetry.scripts]
rupayamn = "rupayamn.rupayamn:main"
